2000-11-29  Darin Adler  <darin@eazel.com>

	reviewed by: Mike Fleming <mfleming@eazel.com>

	* libgnomevfs/gnome-vfs-mime-magic.c:
	(gnome_vfs_mime_get_magic_table),
	(gnome_vfs_mime_clear_magic_table): Eliminate the unused "mmap"
	optimization. We haven't been generating the binary file for a
	while, and we've determined there's no real speed issue.

	* data/mime/gnome-vfs.applications: Use tabs consistently instead
	of some tabs and some spaces. Get rid of some extra whitespace on
	some lines. Fix some "can_open_uris" lines that said
	"can_open_urls" instead.
	
	* data/mime/gnome-vfs.keys: Use tabs consistently instead of some
	tabs and some spaces.

2000-11-29  Pavel Cisler  <pavel@eazel.com>

	* test/test-mime.c: (main):
	Oops, make it build.

2000-11-29  Rebecca Schulman  <rebecka@eazel.com>

	reviewed by: Pavel Cisler <pavel@eazel.com>

	* test/test-mime.c: (main):
	Added a --help argument that lists available arguments,
	and made the script understand both paths and uris,
	and report the case where a uri or path is not valid.

2000-11-29  Rebecca Schulman  <rebecka@eazel.com>

	* modules/file-method.c: (rename_helper):
	Fixed bug 1185, that removing a directory 
	always returns NOT_EMPTY on an error.

2000-11-22  Michael K. Fleming  <mfleming@eazel.com>

	* modules/http-method.c: (sig_gconf_value_changed):
	Fixed bug where setting "/system/gnome-vfs/use-http-proxy"
	wouldn't cause the new http proxy to be used

2000-11-21  Mike Fleming  <mfleming@eazel.com>

	reviewed by: pavel@eazel.com

	* modules/http-method.c: (cache_add_no_strdup), (cache_add),
	(cache_add_uri_and_children), (cache_add_uri),
	(make_propfind_request), (do_open_directory), (do_get_file_info):

	Now caches non-DAV get_file_info's.  Mostly improves the situation
	by allowing a subsequent do_open_directory to return an error
	based on the file info in cache.

	Also added more "is_dav" bit to the cache records

2000-11-20  Mathieu Lacage  <mathieu@eazel.com>

	reviewed by: <mjs@eazel.com>
